[gd_scene load_steps=3 format=3 uid="uid://birilfdmlkqdm"]

[ext_resource type="Script" path="res://scenes/killzone/killzone.gd" id="1_3hqdp"]
[ext_resource type="AudioStream" uid="uid://bb4a6obde2lke" path="res://assets/sfx/hurt.wav" id="2_xcj7v"]

[node name="Killzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_3hqdp")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="SfxPlayerDies" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_xcj7v")
volume_db = -4.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
